Final APIs and Database
